更改任职记录搜索参数，学号姓名职位合一